# nlp-tp1

./: .gitignore  hello.py  pyproject.toml
notebooks/: nlp_tp1.ipynb
shellscripts/: download-analogies-data.sh  download-training-data.sh  install-system-deps.sh  setup-project.sh
