[project]
name = "nlp-tp1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "umap-learn>=0.5.7",
]
